[package]
name = "h3c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8.6", features = ["os-poll", "net"] }
quiche = "0.16.0"
reqwest = { version = "0.11.14", features = ["blocking"] }
ring = "0.16.20"
url = "2.3.1"
